--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": " react-scripts test --silent --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +32,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "jest": "^29.7.0",
+    "react-scripts": "^5.0.1"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": ["/node_modules/", "/src/(App|index)\\.js", "/src/constants"]
   }
+  
+  
 }
